[package]
name = "murmr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
cpal = "0.17.3"
ringbuf = "0.4.8"
clap = "4.5.60"
anyhow = "1.0.102"
bytemuck = "1.25.0"
x25519-dalek = "2.0.1"
rand_core = "0.6.4"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
rand = "0.10.1"
